@@ -1,5 +1,9 @@
 2005-11-01  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* apps/app_parkandannounce.c (parkandannounce_exec): supply parent channel to ast_request_and_dial so channel variables can be inherited (issue #5564)
+	* include/asterisk/channel.h: add parent_channel field
+	* channel.c (__ast_request_and_dial): use parent_channel field to inherit variables into new channel
+
 	* apps/app_cut.c (cut_internal): use ast_separate_app_args() instead of open code (issue #5560)
 
 	* apps/app_mixmonitor.c (launch_monitor_thread): ast_strlen_zero can handle NULL input (issue #5561)
